# bridge-controller

./: .gitmodules  README.md  index.html  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bridge-controller.yaml  pkcs11.yaml
gui/: tsconfig.json
gui/src-tauri/: Cargo.toml
gui/src-tauri/src/: main.rs  state.rs  system_tray.rs
pkcs11/: .gitignore  Cargo.toml  build.rs  wrapper.h
pkcs11/headers/: pkcs11t.h
pkcs11/integration-tests/: README.md  run_softfido_tests.sh
pkcs11/proto/: mpc.proto
pkcs11/src/: bindings.rs  communicator.rs  cryptoki.rs  lib.rs  meesign.rs  state.rs  test.rs
pkcs11/src/communicator/: communicator_error.rs  group.rs  meesign.rs  mocked_meesign.rs  mod.rs
pkcs11/src/cryptoki/: decryption.rs  encryption.rs  general_purpose.rs  key_management.rs  message_digesting.rs  mod.rs  object_management.rs  session_management.rs  signing.rs  slot_token.rs  unsupported.rs
pkcs11/src/state/: mod.rs  object.rs  slots.rs  state.rs  token.rs
pkcs11/src/state/object/: attribute.rs  cryptoki_object.rs  data_object.rs  key_object.rs  mod.rs  object_class.rs  object_search.rs  private_key_object.rs  public_key_object.rs  secret_key_object.rs  template.rs
pkcs11/src/state/session/: mod.rs  session.rs  sessions.rs
src/: App.tsx  bindings.ts  mpc.client.ts  mpc.ts  styles.css  themes.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/proto/: meesign.proto
src-tauri/src/: commands.rs  controller.rs  filesystem.rs  group.rs  interface.rs  main.rs  process.rs  process_manager.rs  state.rs  system_tray.rs
src-tauri/src/commands/: certificates.rs  communicator_url.rs  get_groups.rs  interface_configuration.rs  process_management.rs  tool_configurations.rs
src-tauri/src/controller/: controller_repo.rs  endpoints.rs  interface_configuration.rs  state.rs
src-tauri/src/controller/controller_repo/: controller_repo_error.rs  sled_controller_repo.rs
src-tauri/src/controller/controller_repo/sled_controller_repo/: configuration_key.rs
src-tauri/src/controller/endpoints/: communicator_certificate_path.rs  communicator_url.rs  interface_configuration.rs
src-tauri/src/controller/endpoints/communicator_certificate_path/: certificate_response.rs
src-tauri/src/controller/endpoints/interface_configuration/: http_interface_configuration_response.rs  interface_query.rs
src-tauri/src/controller/interface_configuration/: frontend_interface_configuration.rs  internal_interface_configuration.rs
src-tauri/src/filesystem/: filesystem_error.rs
src-tauri/src/interface/: creatable_interface.rs  cryptographic_interface.rs
src-tauri/src/process/: process_executor.rs  process_manager.rs
src-tauri/src/process/process_executor/: linux_process_executor.rs  windows_process_executor.rs
src-tauri/src/process/process_manager/: process_manager_error.rs
src-tauri/src/process_manager/: linux_process_executor.rs  process_manager_error.rs  windows_process_executor.rs
src/components/interfaceConfiguration/: CertificateUpload.module.css  CertificateUpload.tsx  InterfaceConfiguration.module.css  InterfaceConfiguration.tsx  MultiToolInterfaceConfiguration.module.css  MultiToolInterfaceConfiguration.tsx
src/components/menu/: Menu.module.css  Menu.tsx
src/components/menuSeparator/: MenuSeparator.module.css  (+1 more)
src/models/: IAnimationComponent.ts  ICertificateUpload.ts  IInterfaceConfiguration.ts  IInterfaceForm.ts  IMenuItem.ts  IMultiLabelOptionType.ts  IMultiToolInterfaceConfiguration.ts  IOption.ts  IOptionType.ts  ITool.ts  IToolMenu.ts  IToolMenuItem.ts  IToolMenuItemCreation.ts
src/proto/: mpc.proto
(+20 files in other folders)
