[package]
name = "pkcs11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "meesign_pkcs11"
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "0.65.1"
tonic-build = "0.9.2"

[dependencies]
byteorder = "1.4.3"
aes = "0.8.3"
hex = "0.4.3"
lazy_static = "1.4.0"
libc = "0.2.147"
openssl = "0.10.55"
prost = "0.11"
rand = "0.8.5"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
tonic = { version = "0.9.2", features = ["tls", "transport"] }
