[package]
name = "bridge-controller"
version = "0.0.0"
description = "MPC bridge controller with a GUI."
authors = ["Kristian Mika"]
license = "MIT"
repository = "https://github.com/KristianMika/bridge-controller"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }
tonic-build = "0.9.2"

[dependencies]
env_logger = "0.10"
log = "0.4"
tauri = { version = "1.2", features = ["shell-open", "system-tray"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
prost = "0.11"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["typescript"] }
tonic = { version = "0.9.2", features = ["tls", "transport"] }
hex = "0.4.3"
home = "0.5.5"

# Controller
actix-web = "4"
sled = "1.0.0-alpha.116" # TODO: when stable, choose 1

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
